--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #5d221e;
+    background: rgb(198,246,255);
+    background: linear-gradient(45deg, rgb(164, 211, 219) 0%, rgb(84, 161, 175)100%);
     text-align: center;
     margin: 8px;
     display: block;
@@ -11,7 +12,8 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #d8483e;
+    background: rgb(198,246,255);
+    background: linear-gradient(45deg, rgb(164, 211, 219) 0%, rgb(84, 161, 175)100%);
     animation-name: growfade;
     animation-duration: 1.7s;
     opacity: 100%;
@@ -24,7 +26,8 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #d8483e;
+    background: rgb(198,246,255);
+    background: linear-gradient(45deg, rgb(164, 211, 219) 0%, rgb(84, 161, 175)100%);
     animation-name: growfade2;
     animation-duration: 1.7s;
     animation-direction: reverse;
@@ -51,9 +54,10 @@ body {
     width: auto;
     height: 250px;
     transition: all .2s ease-in-out;
-    border: 7px solid #a53e37;
+    border: 7px solid #62a7b3;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: 3px 3px 30px #0000008a;
 }
 
 .tyyy-header-txt {
@@ -67,7 +71,8 @@ body {
 }
 
 .tyyy-highlight {
-    color: #f4746b;
+    color: #caf4fb;
+    text-shadow: 3px 3px 5px #0000008a;
 }
 
 .div-center,
@@ -89,10 +94,17 @@ body {
     text-align: center;
     margin: 5px 2px;
     border-radius: 20%;
-    color: #f4746b;
-    background: #a53e37;
+    color: #caf4fb;
+    background: #62a7b3;
+    box-shadow: 3px 3px 30px #0000008a;
     transition: all .15s ease-in-out;
+    transition: padding 0.5s;
 }
+
+.tyyy-social-btn:hover {
+    padding: 18px;
+}
+
 
 @keyframes fade {
     from {
